[gd_scene load_steps=9 format=3 uid="uid://b5lerp2kwrdp4"]

[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_4flbx"]
[ext_resource type="Script" uid="uid://b04k8bls7w5kn" path="res://player.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://u7bc4ephl4k1" path="res://gun.tscn" id="3_i3pqv"]
[ext_resource type="Script" uid="uid://dynmfhuixu2xh" path="res://player_health_bar.gd" id="4_hqtel"]

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]
radius = 33.0151

[sub_resource type="CircleShape2D" id="CircleShape2D_i3pqv"]
radius = 45.0444

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3pqv"]
bg_color = Color(0.152941, 0.168627, 0.188235, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqtel"]
bg_color = Color(0.623529, 0.866667, 0.317647, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_onrkg")

[node name="HappyBoo" parent="." instance=ExtResource("1_4flbx")]
unique_name_in_owner = true
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_onrkg")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Gun" parent="." instance=ExtResource("3_i3pqv")]
position = Vector2(1, -36)

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_i3pqv")
debug_color = Color(0.780492, 0.380338, 0.567742, 0.42)

[node name="PlayerHealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -110.0
offset_top = -156.0
offset_right = 110.0
offset_bottom = -125.0
rotation = 0.000412092
theme_override_styles/background = SubResource("StyleBoxFlat_i3pqv")
theme_override_styles/fill = SubResource("StyleBoxFlat_hqtel")
value = 100.0
show_percentage = false
script = ExtResource("4_hqtel")
